# pyapollo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: mr.yaml
pyapollo/: client.py  config.py  exception.py
tests/: test_config.py
